--- a/sabre/css/sabre_select2.less
+++ b/sabre/css/sabre_select2.less
@@ -198,7 +198,15 @@ abbr.select2-search-choice-close {
   padding: 3px 20px;
   font-size: @font-size-base;
 }
-
+.select2-search {
+  z-index: @zindex-dropdown;
+}
+.select2-drop  {
+  z-index: @zindex-dropdown - 1;
+}
+.select2-drop-mask  {
+  z-index: @zindex-dropdown - 2;
+}
 /* new */
 
 .select2-results .select2-highlighted {
